# Road-Mapping-Scementic-Segmentation

./: README.md  export_onnx.py  train_deeplabv3plus.py
data/: README.dataset.txt  README.roboflow.txt
data/valid/: _classes.csv
road_segmentation/: MANIFEST.in  package.xml  setup.cfg  setup.py
road_segmentation/road_segmentation/: onnx_segment_node.py
